<resources>
    <string name="app_name">Mason Framework Sample</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mason Framework SDK</string>
    <string name="nav_header_subtitle">support@bymason.com</string>
    <string name="nav_header_desc">Mason Framework SDK navigation header</string>
    <string name="version">2.11.0</string>

    <!-- Menu navigation -->
    <string name="menu_home">Home</string>
    <string name="menu_alarm">Alarm</string>
    <string name="menu_bars">Bars</string>
    <string name="menu_nfc">NFC</string>
    <string name="menu_power">Power</string>
    <string name="menu_fota">FOTA</string>

    <!-- Home Fragment -->
    <string name="mason_customer_id_key">Customer ID</string>
    <string name="mason_attribute_header">Attribute</string>
    <string name="mason_value_header">Value</string>
    <string name="mason_device_id">Device Model</string>
    <string name="mason_product_id">Product ID</string>
    <string name="mason_project_id">Project ID</string>
    <string name="mason_project_version">Project Version</string>

    <!-- Alarm Fragment -->
    <string name="alarm_manager_set_time">Date &amp; Time</string>
    <string name="alarm_manager_set_time_description">Set device time</string>
    <string name="alarm_manager_time_change_amount">1 hour</string>

    <string name="alarm_manager_set_timezone">Timezone</string>
    <string name="alarm_manager_set_timezone_description">Set device timezone</string>
    <string name="alarm_manager_set_timezone_america">America/Los_Angeles</string>
    <string name="alarm_manager_set_timezone_asia">Asia/Taipei</string>

    <!-- Bars Fragment -->
    <string name="bars_manager_enable_navigation_bar">Enable Navigation Bar</string>
    <string name="bars_manager_enable_navigation_bar_description">Enable or disable the use of the navigation bar</string>
    <string name="bars_manager_enable_navigation_bar_button">Enable</string>
    <string name="bars_manager_disable_navigation_bar_button">Disable</string>

    <string name="bars_manager_enable_status_bar">Enable Status Bar</string>
    <string name="bars_manager_enable_status_bar_description">Enable or disable the use of the system status bar</string>
    <string name="bars_manager_disable_status_bar_button">Disable</string>
    <string name="bars_manager_enable_status_bar_button">Enable</string>

    <!-- Nfc Fragment -->
    <string name="nfc_adapter_set_nfc">Set NFC Module</string>
    <string name="nfc_adapter_set_nfc_description">Enable or Disable NFC Hardware</string>
    <string name="nfc_adapter_enable_nfc_button">Enable</string>
    <string name="nfc_adapter_disable_nfc_button">Disable</string>
    <string name="nfc_status_label">Status: </string>
    <string name="nfc_status_enabled">Enable</string>
    <string name="nfc_status_disabled">Disable</string>
    <string name="nfc_state_unknown">UNKNOWN</string>
    <string name="nfc_state_turning_on">TURNING ON</string>
    <string name="nfc_state_on">NFC ON</string>
    <string name="nfc_state_turning_off">TURNING OFF</string>
    <string name="nfc_state_off">NFC OFF</string>

    <!-- Power Fragment -->
    <string name="power_manager_reboot">Reboot</string>
    <string name="power_manager_reboot_description">Reboot the device</string>
    <string name="power_manager_reboot_button">Reboot</string>
    <string name="power_manager_shutdown">Shutdown</string>
    <string name="power_manager_shutdown_description">Shutdown the device</string>
    <string name="power_manager_shutdown_button">Shutdown</string>
    <string name="power_manager_sleep">Sleep</string>
    <string name="power_manager_sleep_description">Put the device to sleep</string>
    <string name="power_manager_sleep_button">Sleep</string>

    <!-- Fota Fragment-->
    <string name="fota_manager_install">Firmware Over-The-Air (FOTA) Install</string>
    <string name="fota_manager_install_button">Install</string>
    <string name="fota_manager_install_description">"FOTA updates can be handled by an application if the app's package_name is specified as the value for config_install_prompt_package. However, if the configuration is not set then the normal configured FOTA update behavior will occur."</string>
</resources>