<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_alarm_manager"
            android:icon="@drawable/ic_menu_alarm"
            android:title="@string/menu_alarm" />
        <item
            android:id="@+id/nav_bars_manager"
            android:icon="@drawable/ic_menu_bar"
            android:title="@string/menu_bars" />
        <item
            android:id="@+id/nav_nfc_adapter"
            android:icon="@drawable/ic_menu_nfc"
            android:title="@string/menu_nfc" />
        <item
            android:id="@+id/nav_power_manager"
            android:icon="@drawable/ic_menu_power"
            android:title="@string/menu_power" />

        <item
            android:icon="@drawable/ic_menu_fota"
            android:id="@+id/nav_fota_manager"
            android:title="@string/menu_fota"/>

    </group>
</menu>